<resources>
    <string name="app_name">Fragments</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">Go To Activity-1</string>
    <string name="btn2">Go To Activity-2</string>
    <string name="btn3">Go To Activity-3</string>
    <string name="btn4">Go To Activity-4</string>
    <string name="btn5">Go To Activity-5</string>

    <!-- Activity1 -->
    <string name="title_activity_1">Activity1</string>
    <string name="frag1">Fragment of Activity-1</string>

    <!-- Activity2 -->
    <string name="title_activity_2">Activity2</string>
    <string name="frag2">Fragment of Activity-2</string>

    <!--Activity3, 4-->
    <string name="title_activity_3">Activity3</string>
    <string name="title_activity_4">Activity4</string>

    <!--Activity5-->
    <string name="frag51">Fragment1 of Activity-5</string>
    <string name="frag52">Fragment2 of Activity-5</string>
    <string name="title_activity_5">Activity5</string>
</resources>
